# fastapi-menu-async

./: .gitmessage  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: tests.yml
src/: main.py  middlewares.py
src/api/v1/repositories/dish/: __init__.py  base.py  dish.py
src/api/v1/repositories/menu/: __init__.py  base.py  menu.py
src/api/v1/repositories/submenu/: __init__.py  base.py  submenu.py
src/api/v1/resources/: dishes.py  menus.py  submenus.py
src/api/v1/schemas/: healthcheck.py  status_message.py
src/api/v1/services/: __init__.py  dish.py  menu.py  mixins.py  submenu.py
src/api/v2/repositories/: dish.py  menu.py  submenu.py
src/api/v2/resources/: dishes.py  menus.py  submenus.py
src/api/v2/services/: dish.py  menu.py  mixins.py  submenu.py
src/core/: config.py  config.yaml
src/db/: cache.py  db.py  dummy_cache.py  fake_cache.py  redis_cache.py
src/migrations/: env.py
src/migrations/versions/: 2023_01_08_0800_add_app_tables.py  2023_01_08_1518_add_app_tables.py
src/models/: dish.py  menu.py  mixins.py  submenu.py
src/repositories/: base.py
src/repositories/dish/: dish.py
src/repositories/menu/: menu.py
src/repositories/submenu/: fake.py  submenu.py
src/schemas/: base.py  healthcheck.py  status_message.py
src/uow/: base.py  sqlalchemy.py
tests/: conftest.py
tests/functionals/: test_get_menu_list.py
